<resources>
    <string name="app_name">Sofits</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_autores">Autores</string>
    <string name="title_perfil">Perfil</string>
    <string name="input_email">Email</string>
    <string name="password_input">Password</string>
    <string name="opcion_registro">¿No tienes cuenta? Registrate</string>
    <string name="TOKEN">token_almacen</string>
    <string name="TOKEN_USER">token_usuario</string>
    <string name="TOKEN_REFRESCO">token_usuario_refresco</string>
    <string name="MensajeErroLogin">Nombre de usuario o contraseña no válidos</string>
    <string name="favoritos_autores">Autores favoritos</string>
    <string name="mis_libros_favoritos">Libros Favoritos</string>
    <string name="title_activity_autor_detail">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_chat">Chat</string>
    <string name="IdentificadorUsuario">idUsuario</string>
    <string name="buton_completar">Completar</string>
    <string name="error_registro">Rellene todos los campos y seleccione una imagen de perfil</string>
    <string name="title_activity_publicaciones">ScrollingActivity</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="editarUsuario">¿Desea editar el usuario?</string>
    <string name="editarUsuarioTitle">EditarUsuario</string>
    <string name="confirmacion">Si</string>
    <string name="negacion">No</string>
    <string name="chat_button">Chat</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Editar">Editar</string>
    <string name="EliminarEditarTitle">Eliminar/Editar</string>
    <string name="EliminarEditarPregunta">Deseas eliminar o editar la publicación</string>
    <string name="seleccionImagen">Seleccione una imagen</string>
    <string name="estadoLibro">Estado de conservación del libro</string>
    <string name="IdiomaLibro">Idioma</string>
    <string name="EdicionLibro">Edición</string>
    <string name="InformacionLibro">Información relevante</string>
    <string name="rolesUsuario">rolesUsuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InputNombreAutor">Nombre del autor</string>
    <string name="nacimientoAutor">Fecha de nacimiento del autor</string>
    <string name="inputBiografia">Datos biográficos del autor</string>
    <string name="EleccionImagen">Escoger imagen para el autor</string>
    <string name="SelectDate">Fecha de nacimiento</string>
    <string name="chatVacio">Aqui aparecerán tus conversaciones con los demás usuarios</string>
</resources>